app-test/testdata/typesystem/neg/pattern-matching-alternative-guard-type/check/patmat.check
Error in "testdata/typesystem/neg/pattern-matching-alternative-guard-type/src/patmat.cal" on line 7:
                        n guard n + 1 : n end // error
                                ^^^^^
Incompatible types; expected bool but was uint(size=1).